@@ -5,6 +5,7 @@ Version 2.4
 * Change polId to recBandId in the PCAL files as per documentation
 * Add support for TCP, UDP and Raw Ethernet Interlaced VDIF.  ** Not yet tested **
 * Text Mark5 XLRReadData() calls by tainting the end of the destination buffer and verifying it gets untainted.
+* When reading data from Mark5 units, verify that the data is in the same format class as requested by the .input file.
 
 Version 2.3
 ~~~~~~~~~~~
